stages/stage4/k8s/apps/catalog/catalog-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-allow-specific
  namespace: apollo11-apps
spec:
  podSelector:
    matchLabels:
      app: catalog
  policyTypes:
    - Ingress
  ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                name: apollo11-ui
            podSelector:
              matchLabels:
                app: frontend
